--- a/app/app.css
+++ b/app/app.css
@@ -1,3 +1,9 @@
 .hasEndlessScroll {
     position: relative;
 }
+
+.searchBar {
+    margin-left: 20px;
+    margin-right: 20px;
+    margin-top: 15px;
+}
